crates/ddlog-syntax/tests/validation/fail/missing_function_arg_commas.rast
ROOT@0..84
  COMMENT@0..50 "// kind:item validate ..."
  WHITESPACE@50..51 "\n"
  ERROR@51..84
    IDENT@51..59 "function"
    WHITESPACE@59..60 " "
    IDENT@60..63 "foo"
    L_PAREN@63..64 "("
    IDENT@64..67 "foo"
    COLON@67..68 ":"
    WHITESPACE@68..69 " "
    IDENT@69..72 "Bar"
    WHITESPACE@72..73 " "
    IDENT@73..76 "bar"
    COLON@76..77 ":"
    WHITESPACE@77..78 " "
    IDENT@78..81 "Baz"
    R_PAREN@81..82 ")"
    WHITESPACE@82..83 " "
    L_CURLY@83..84 "{"
--
Error: expected a top-level item
   ,-[validation/fail/missing_function_arg_commas.dl:2:1]
   |
 2 | function foo(foo: Bar bar: Baz) {}
   : ^^^^^^^^^^^^^^^^|^^^^^^^^^^^^^^^^  
   :                 `------------------ expected a top-level item
---'
--
// kind:item validate:true pass:false ignore:false
function foo(foo: Bar bar: Baz) {}
